--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "i18next-browser-languagedetector": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-html5video": "^2.5.1",
     "react-i18next": "^12.1.5",
     "react-icons": "^4.6.0",
     "react-router": "^6.8.1",
