--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "graphql-tag": "^2.12.6",
     "i18next": "^22.4.9",
     "i18next-browser-languagedetector": "^7.0.1",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-html5video": "^2.5.1",
