--- a/client/package.json
+++ b/client/package.json
@@ -14,17 +14,20 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "apollo-link-context": "^1.0.20",
-    "framer-motion": "^9.0.4",
+    "framer-motion": "^9.1.7",
     "graphql": "^16.8.1",
     "graphql-tag": "^2.12.6",
+    "html2pdf.js": "^0.10.1",
     "i18next": "^22.4.9",
     "i18next-browser-languagedetector": "^7.0.1",
+    "jspdf": "^2.5.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-html5video": "^2.5.1",
     "react-i18next": "^12.1.5",
     "react-icons": "^4.6.0",
+    "react-intersection-observer": "^9.5.2",
     "react-modal": "^3.16.1",
     "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1",
