--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "apollo-link-context": "^1.0.20",
+    "create-vite": "^4.4.1",
     "framer-motion": "^9.1.7",
     "graphql": "^16.8.1",
     "graphql-tag": "^2.12.6",
